--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -27,3 +27,5 @@ async-trait = "0.1.52"
 tracing = "0.1.32"
 tracing-subscriber = { version = "0.3.9", features = ["env-filter"]}
 tracing-appender = "0.2.1"
+
+notify = "5.0.0-pre.13"
