--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -26,3 +26,4 @@ tracing-subscriber = { version = "0.3.9", features = ["env-filter"]}
 tracing-appender = "0.2.1"
 
 notify = "5.0.0-pre.13"
+wax = "0.4.0"
