--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -28,3 +28,8 @@ tracing-appender = "0.2.1"
 notify = "5.0.0-pre.13"
 dirs = "4.0"
 wax = "0.4.0"
+
+# WARN: api totally changed on later versions.
+# It would make sense to create custom function
+gitignore = "1.0.7"
+
