--- a/shared/Cargo.toml
+++ b/shared/Cargo.toml
@@ -9,6 +9,7 @@ anyhow = "^1.0.42"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0.79"
 serde_yaml = "0.8.23"
 
 # Get processes, processors, disks, components and networks
@@ -28,6 +29,9 @@ tracing-appender = "0.2.1"
 notify = "5.0.0-pre.13"
 dirs = "4.0"
 wax = "0.4.0"
+regex = "1.5"
+lazy_static = "1.4.0"
+shell-words = "1.1.0"
 
 # WARN: api totally changed on later versions.
 # It would make sense to create custom function
