--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,50 @@
+[package]
+name = "xcodebase"
+version = "0.1.0"
+edition = "2021"
+
+[dependencies]
+# Error Handling
+anyhow = "^1.0.42"
+
+# Serialization
+serde = { version = "1.0", features = ["derive"]}
+serde_json = "1.0.79"
+serde_yaml = "0.8.23"
+
+# Get processes, processors, disks, components and networks
+# sysinfo = "0.23.5"
+libproc = "0.10.0"
+
+# Mainly for running async code and managing UnixListener
+tokio = { version = "1.17.0", features = ["full"]  }
+# Shorthand async
+async-trait = "0.1.52"
+
+# Async tracing
+tracing = "0.1.32"
+tracing-subscriber = { version = "0.3.9", features = ["env-filter"]}
+tracing-appender = "0.2.1"
+
+notify = "5.0.0-pre.13"
+dirs = "4.0"
+wax = "0.4.0"
+regex = "1.5"
+lazy_static = "1.4.0"
+shell-words = "1.1.0"
+
+# WARN: api totally changed on later versions.
+# It would make sense to create custom function
+# Breaks
+# gitignore = "1.0.7"
+
+[lib]
+name = "xcodebase"
+path = "core/lib.rs"
+
 [workspace]
 members = [
-  "shared",
   "daemon",
   "lsp",
-  "nvim"
+  "nvim",
 ]
