feat(core): abstract everything in core
Feels right todo it this way. more feature guard needs to be added
though.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,12 +32,16 @@ wax = "0.4.0"
 regex = "1.5"
 lazy_static = "1.4.0"
 shell-words = "1.1.0"
+mlua = { version = "0.7.4", optional = true }
 # TODO: make libxcodebase lightweight
 # Use features to exclude stuff likce tracing and async-trait as well tokio
 # WARN: api totally changed on later versions.
 # It would make sense to create custom function
 # Breaks
 # gitignore = "1.0.7"
+[features]
+default = [ ]
+lua = [ "mlua" ]
 
 [lib]
 name = "xcodebase"
