--- a/pkgs/daemon/Cargo.toml
+++ b/pkgs/daemon/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-xcodebase = { path = "../" }
+xcodebase = { path = "../../" }
 
 # Error Handling
 anyhow = "^1.0.42"
@@ -29,3 +29,7 @@ tracing-subscriber = { version = "0.3.9", features = ["env-filter"]}
 tracing-appender = "0.2.1"
 
 notify = "5.0.0-pre.13"
+
+# [bin]
+# # name = "xcodebase-daemon"
+# path = "bin.rs"
