--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,17 +4,17 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
-default    = [ ]
-xcodegen   = [ "async", "dirs" ]
-daemon     = [ "serial", "completion", "logging", "xcode", "async", "watcher", "proc", "xcodegen" ]
-lua        = [ "mlua" ]
-serial     = [ "serde", "serde_json", "serde_yaml" ]
-completion = [ "serial", "lazy_static", "regex" ]
-logging    = [ "tracing", "tracing-appender", "tracing-subscriber" ]
-xcode      = [ "serial" ]
-async      = [ "tokio", "async-trait" ]
-proc       = [ "libproc" ]
-watcher    = [ "dirs", "notify", "wax" ]
+default     = [ ]
+xcodegen    = [ "async", "dirs" ]
+daemon      = [ "serial", "compilation", "logging", "xcode", "async", "watcher", "proc", "xcodegen" ]
+lua         = [ "mlua" ]
+serial      = [ "serde", "serde_json", "serde_yaml" ]
+compilation = [ "serial", "lazy_static", "regex", "shell-words" ]
+logging     = [ "tracing", "tracing-appender", "tracing-subscriber" ]
+xcode       = [ ]
+async       = [ "tokio", "async-trait" ]
+proc        = [ "libproc" ]
+watcher     = [ "dirs", "notify", "wax" ]
 
 [lib]
 name = "xcodebase"
@@ -34,32 +34,36 @@ required-features = ["daemon"]
 
 # Error Handling
 anyhow             = "^1.0.42"
+# suffix-position pipeline
+tap = "1.0.1"
 
 # Serialization Feature
-serde              = { version = "1.0",    features = ["derive"], optional = true }
-serde_json         = { version = "1.0.79", optional = true }
-serde_yaml         = { version = "0.8.23", optional = true }
+serde                 = { version = "1.0",    features = ["derive"], optional = true }
+serde_json            = { version = "1.0.79", optional = true }
+serde_yaml            = { version = "0.8.23", optional = true }
 
 # Async Runtime Feature
-tokio              = { version = "1.17.0", features = ["full"], optional = true }
-async-trait        = { version = "0.1.52", optional = true }
+tokio                 = { version = "1.17.0", features = ["full"], optional = true }
+tokio-util            = { version = "0.7.1", features = ["codec"], optional = true }
+async-trait           = { version = "0.1.52", optional = true }
 
 # Logging Feature
-tracing            = { version = "0.1.32", optional = true }
-tracing-subscriber = { version = "0.3.9",  features = ["env-filter"], optional = true}
-tracing-appender   = { version = "0.2.1",  optional = true }
+tracing               = { version = "0.1.32", optional = true }
+tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}
+tracing-appender      = { version = "0.2.1",  optional = true }
 
 # Filesystem watcher
-notify             = { version = "5.0.0-pre.13", optional = true }
-dirs               = { version = "4.0",   optional = true }
-wax                = { version = "0.4.0", optional = true }
+notify                = { version = "5.0.0-pre.13", optional = true }
+dirs                  = { version = "4.0",   optional = true }
+wax                   = { version = "0.4.0", optional = true }
 
-# Build logs Completion feature
-regex              = { version = "1.5",   optional = true }
-lazy_static        = { version = "1.4.0", optional = true }
-shell-words        = { version  = "1.1.0" }
-mlua               = { version = "0.7.4", optional = true } 
+# Build Logs/Command Compilation feature
+regex                 = { version = "1.5",   optional = true }
+lazy_static           = { version = "1.4.0", optional = true }
+shell-words           = { version  = "1.1.0", optional = true }
+mlua                  = { version = "0.7.4", optional = true } 
+
 
 # Proc feature: processes, processors, disks, components and networks
 # sysinfo = "0.23.5"
-libproc            = { version = "0.10.0", optional = true }
+libproc               = { version = "0.10.0", optional = true }
