--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,7 +61,7 @@ wax                   = { version = "0.4.0", optional = true }
 regex                 = { version = "1.5",   optional = true }
 lazy_static           = { version = "1.4.0", optional = true }
 shell-words           = { version  = "1.1.0", optional = true }
-mlua                  = { version = "0.7.4", optional = true } 
+mlua                  = { version = "0.7.4", features = ["lua51", "vendored"], optional = true } 
 
 
 # Proc feature: processes, processors, disks, components and networks
