--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
-daemon      = [ "serial", "compilation", "logging", "xcode", "async", "watcher", "proc", "xcodegen" ]
+daemon      = [ "serial", "compilation", "logging", "xcode", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs" ]
 server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation" ]
 lua         = [ "mlua" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
@@ -68,3 +68,5 @@ bsp-server            = { version  = "0.1.2", path = "../../rust/build-server-pr
 # Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
 libproc               = { version = "0.11.1", optional = true }
 url                   = { version = "2.2.2",  features = ["serde"], optional = true }
+nvim-rs               = { version = "0.4.0", optional = true, features = ["use_tokio"] }
+parity-tokio-ipc      = { version = "0.9.0", optional = true }
