--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,12 @@ edition = "2021"
 [features]
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
-daemon      = [ "serial", "compilation", "logging", "xcode", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs" ]
+daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs" ]
 server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation" ]
 lua         = [ "mlua" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
-compilation = [ "serial", "lazy_static", "regex", "shell-words" ]
+compilation = [ "serial", "lazy_static", "shell-words", "xcodebuild" ]
 logging     = [ "tracing", "tracing-appender", "tracing-subscriber" ]
-xcode       = [ ]
 async       = [ "tokio", "async-trait" ]
 proc        = [ "libproc" ]
 watcher     = [ "dirs", "notify", "wax" ]
@@ -59,14 +58,19 @@ notify                = { version = "5.0.0-pre.13", optional = true }
 dirs                  = { version = "4.0",    optional = true }
 wax                   = { version = "0.4.0",  optional = true }
 # Build Logs/Command Compilation feature
-regex                 = { version = "1.5",    optional = true }
 lazy_static           = { version = "1.4.0",  optional = true }
 shell-words           = { version  = "1.1.0", optional = true }
 # Other
 mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true } 
 bsp-server            = { version  = "0.1.2", path = "../../rust/build-server-protocol/bsp-server/", optional = true }
+xcodebuild            = { version  = "0.1.2", path = "../../rust/xcodebuild/", optional = true, features = ["tracing"] }
 # Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
 libproc               = { version = "0.11.1", optional = true }
 url                   = { version = "2.2.2",  features = ["serde"], optional = true }
 nvim-rs               = { version = "0.4.0", optional = true, features = ["use_tokio"] }
 parity-tokio-ipc      = { version = "0.9.0", optional = true }
+strum                 = { version = "0.24.0",  features = ["derive"], optional  = true }
+libc                  = "0.2.124"
+polling               = "2.2.0"
+tokio-stream          = {version = "0.1.8", features = ["io-util"]}
+thiserror = "1.0.30"
