--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
-daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs" ]
+daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs", "async-stream", "tokio-stream" ]
 server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation" ]
 lua         = [ "mlua" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
@@ -70,7 +70,5 @@ url                   = { version = "2.2.2",  features = ["serde"], optional = t
 nvim-rs               = { version = "0.4.0", optional = true, features = ["use_tokio"] }
 parity-tokio-ipc      = { version = "0.9.0", optional = true }
 strum                 = { version = "0.24.0",  features = ["derive"], optional  = true }
-libc                  = "0.2.124"
-polling               = "2.2.0"
-tokio-stream          = {version = "0.1.8", features = ["io-util"]}
-thiserror = "1.0.30"
+tokio-stream          = { version = "0.1.8", features = ["io-util"], optional = true  }
+async-stream          = { version = "0.3.3", optional = true }
