--- a/lua/xcodebase/Cargo.toml
+++ b/lua/xcodebase/Cargo.toml
@@ -10,3 +10,4 @@ path = "lib.rs"
 [dependencies]
 xcodebase = { path = "../../", features = [ "lua" ] }
 mlua = { version = "0.7.4", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"]  }
+serde_json = "1.0.81"
