--- a/lua/xbase/Cargo.toml
+++ b/lua/xbase/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "libxcodebase"
+name = "libxbase"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,6 +8,6 @@ crate-type = ["cdylib"]
 path = "lib.rs"
 
 [dependencies]
-xcodebase = { path = "../../", features = [ "lua" ] }
+xbase = { path = "../../", features = [ "lua" ] }
 mlua = { version = "0.7.4", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"]  }
 serde_json = "1.0.81"
