--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
-daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs", "async-stream", "tokio-stream", "strum" ]
+daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs", "async-stream", "tokio-stream", "strum", "simctl" ]
 server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation", "strum" ]
 lua         = [ "mlua", "serial", "strum" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
@@ -73,3 +73,4 @@ parity-tokio-ipc      = { version = "0.9.0", optional = true }
 strum                 = { version = "0.24.0",  features = ["derive"], optional  = true }
 tokio-stream          = { version = "0.1.8", features = ["io-util"], optional = true  }
 async-stream          = { version = "0.3.3", optional = true }
+simctl                = { path = "../../../sources/simctl/", optional = true }
