--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ default     = [ ]
 xcodegen    = [ "async", "dirs" ]
 daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs", "async-stream", "tokio-stream", "strum", "simctl" ]
 server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation", "strum" ]
-lua         = [ "mlua", "serial", "strum" ]
+lua         = [ "mlua", "serial", "strum", "simctl" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
 compilation = [ "serial", "lazy_static", "shell-words", "xcode" ]
 logging     = [ "tracing", "tracing-appender", "tracing-subscriber" ]
