--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,27 @@ edition = "2021"
 [features]
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
-daemon      = [ "serial", "compilation", "logging", "async", "watcher", "proc", "xcodegen", "parity-tokio-ipc", "nvim-rs", "strum", "simctl" ]
-server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation", "strum" ]
-lua         = [ "mlua", "serial", "strum", "simctl" ]
+daemon      = [ 
+  "serial", 
+  "compilation", 
+  "logging", 
+  "async", 
+  "watcher",
+  "proc", 
+  "xcodegen", 
+  "parity-tokio-ipc", 
+  "nvim-rs", 
+  "simctl", 
+  "process-stream" 
+  ]
+server      = [ "serial", "logging", "dirs", "bsp-server", "url", "wax", "shell-words", "compilation" ]
+lua         = [ "mlua", "serial", "simctl" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
 compilation = [ "serial", "lazy_static", "shell-words", "xcode" ]
 logging     = [ "tracing", "tracing-appender", "tracing-subscriber" ]
-async       = [ "tokio", "async-trait", "futures", "async-stream", "tokio-stream" ]
+async       = [ "tokio", "async-trait", "async-stream" ]
 proc        = [ "libproc" ]
 watcher     = [ "dirs", "notify", "wax" ]
-jsonrpc     = [ "serial" ]
 xcode       = [ "xcodebuild" ]
 
 [lib]
@@ -46,13 +57,13 @@ tap                   = "1.0.1"
 serde                 = { version = "1.0",    features = ["derive"], optional = true }
 serde_json            = { version = "1.0.79", optional = true }
 serde_yaml            = { version = "0.8.23", optional = true }
+strum                 = { version = "0.24.0",  features = ["derive"] }
 # Async Runtime Feature
 tokio                 = { version = "1.17.0", features = ["full"], optional = true }
 tokio-util            = { version = "0.7.1",  features = ["codec"], optional = true }
 async-trait           = { version = "0.1.52", optional = true }
-tokio-stream          = { version = "0.1.8", features = ["io-util"], optional = true  }
 async-stream          = { version = "0.3.3", optional = true }
-futures               = { version = "0.3.21", optional = true } 
+process-stream        = { version  = "0.1.3", optional = true }
 # Logging Feature
 tracing               = { version = "0.1.32", optional = true }
 tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}
@@ -73,7 +84,6 @@ libproc               = { version = "0.12.0", optional = true }
 url                   = { version = "2.2.2",  features = ["serde"], optional = true }
 nvim-rs               = { version = "0.4.0", optional = true, features = ["use_tokio"] }
 parity-tokio-ipc      = { version = "0.9.0", optional = true }
-strum                 = { version = "0.24.0",  features = ["derive"], optional  = true }
 simctl                = { path = "../../../sources/simctl/", optional = true }
 thiserror = "1.0.31"
 libc = "0.2.126"
