--- a/Cargo.toml
+++ b/Cargo.toml
@@ -73,7 +73,7 @@ tokio                 = { version = "1.17.0", features = ["full"], optional = tr
 tokio-util            = { version = "0.7.1",  features = ["codec"], optional = true }
 async-trait           = { version = "0.1.52", optional = true }
 async-stream          = { version = "0.3.3", optional = true }
-process-stream        = { version  = "0.1.3", optional = true }
+process-stream        = { path = "../../rust/process-stream/", optional = true }
 # Logging Feature
 tracing               = { version = "0.1.32", optional = true }
 tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}
