--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,19 +7,20 @@ edition = "2021"
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
 daemon      = [ 
-  "serial", 
-  "compilation", 
-  "logging", 
-  "async", 
+  "serial",
+  "compilation",
+  "logging",
+  "async",
   "watcher",
-  "proc", 
-  "xcodegen", 
-  "parity-tokio-ipc", 
-  "nvim-rs", 
-  "simctl", 
-  "process-stream" 
+  "proc",
+  "xcodegen",
+  "parity-tokio-ipc",
+  "nvim-rs",
+  "simctl",
+  "process-stream",
+  "futures"
   ]
-server      = [ 
+server      = [
   "serial",
   "logging",
   "dirs",
@@ -27,7 +28,7 @@ server      = [
   "url",
   "wax",
   "shell-words",
-  "compilation", 
+  "compilation",
   "crossbeam-channel" 
   ]
 lua         = [ "mlua", "serial", "simctl" ]
@@ -95,6 +96,8 @@ url                   = { version = "2.2.2",  features = ["serde"], optional = t
 nvim-rs               = { version = "0.4.0", optional = true, features = ["use_tokio"] }
 parity-tokio-ipc      = { version = "0.9.0", optional = true }
 simctl                = { path = "../../../sources/simctl/", optional = true }
-thiserror = "1.0.31"
-libc = "0.2.126"
-crossbeam-channel = { version = "0.5.4", optional = true }
+futures               = { version = "0.3.21", optional = true }
+thiserror             = "1.0.31"
+libc                  = "0.2.126"
+derive-deref-rs       = "0.1.1"
+crossbeam-channel     = { version = "0.5.4", optional = true }
