--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [features]
 default     = [ ]
 xcodegen    = [ "async", "dirs" ]
-daemon      = [ 
+daemon      = [
   "serial",
   "compilation",
   "logging",
@@ -29,7 +29,7 @@ server      = [
   "wax",
   "shell-words",
   "compilation",
-  "crossbeam-channel" 
+  "crossbeam-channel"
   ]
 lua         = [ "mlua", "serial", "simctl", "lazy_static" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
@@ -87,9 +87,9 @@ wax                   = { version = "0.4.0",  optional = true }
 lazy_static           = { version = "1.4.0",  optional = true }
 shell-words           = { version  = "1.1.0", optional = true }
 # Other
-mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true } 
+mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true }
 bsp-server            = { version  = "0.1.*", optional = true }
-xcodebuild            = { version  = "0.1.*", optional = true, features = ["tracing"] }
+xcodebuild            = { version  = "0.1.7", optional = true, features = ["tracing"] }
 
 # Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
 libproc               = { version = "0.12.0", optional = true }
