--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xbase"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2021"
 
 [features]
@@ -89,7 +89,7 @@ shell-words           = { version  = "1.1.0", optional = true }
 # Other
 mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true }
 bsp-server            = { version  = "0.1.*", optional = true }
-xcodebuild            = { version  = "0.1.8", optional = true, features = ["tracing"] }
+xcodebuild            = { version  = "0.1.10", optional = true, features = ["with_tracing"] }
 
 # Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
 libproc               = { version = "0.12.0", optional = true }
