--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ daemon      = [
   "nvim-rs",
   "simctl",
   "process-stream",
-  "futures"
+  "futures",
+  "xclog"
   ]
 server      = [
   "serial",
@@ -89,6 +90,7 @@ shell-words           = { version  = "1.1.0", optional = true }
 # Other
 mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true }
 bsp-server            = { version  = "0.1.*", optional = true }
+# TODO: Remove xcodebuild
 xcodebuild            = { version  = "0.1.10", optional = true, features = ["with_tracing"] }
 xclog                 = { version  = "0.2.*",  optional = true, features = ["with_tracing"] }
 
