--- a/Cargo.toml
+++ b/Cargo.toml
@@ -92,7 +92,8 @@ mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], 
 bsp-server            = { version  = "0.1.*", optional = true }
 # TODO: Remove xcodebuild
 xcodebuild            = { version  = "0.1.10", optional = true, features = ["with_tracing"] }
-xclog                 = { version  = "0.2.*",  optional = true, features = ["with_tracing"] }
+# xclog                 = { version  = "0.2.*",  optional = true, features = ["with_tracing"] }
+xclog                 = { path = "../../rust/xclog/",  optional = true, features = ["with_tracing"] }
 
 # Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
 libproc               = { version = "0.12.0", optional = true }
