--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,8 @@ daemon      = [
   "nvim-rs",
   "simctl",
   "process-stream",
-  "futures"
+  "futures",
+  "xclog"
   ]
 server      = [
   "serial",
@@ -29,7 +30,8 @@ server      = [
   "wax",
   "shell-words",
   "compilation",
-  "crossbeam-channel"
+  "crossbeam-channel",
+  "xclog"
   ]
 lua         = [ "mlua", "serial", "simctl", "lazy_static" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
@@ -38,7 +40,7 @@ logging     = [ "tracing", "tracing-appender", "tracing-subscriber" ]
 async       = [ "tokio", "async-trait", "async-stream" ]
 proc        = [ "libproc" ]
 watcher     = [ "dirs", "notify", "wax" ]
-xcode       = [ "xcodebuild" ]
+xcode       = [ "xclog" ]
 
 [lib]
 name = "xbase"
@@ -89,7 +91,8 @@ shell-words           = { version  = "1.1.0", optional = true }
 # Other
 mlua                  = { version = "0.7.4",  features = ["lua51", "vendored"], optional = true }
 bsp-server            = { version  = "0.1.*", optional = true }
-xcodebuild            = { version  = "0.1.10", optional = true, features = ["with_tracing"] }
+xclog                 = { version  = "0.2.*",  optional = true, features = ["with_tracing"] }
+
 
 # Proc feature: processes, processors, disks, components and networks (sysinfo = "0.23.5")
 libproc               = { version = "0.12.0", optional = true }
