--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ xcodegen    = [ "async", "dirs" ]
 daemon      = [
   "serial",
   "compilation",
-  "logging",
   "async",
   "watcher",
   "proc",
@@ -23,7 +22,6 @@ daemon      = [
   ]
 server      = [
   "serial",
-  "logging",
   "dirs",
   "bsp-server",
   "url",
@@ -36,7 +34,6 @@ server      = [
 lua         = [ "mlua", "serial", "simctl", "lazy_static" ]
 serial      = [ "serde", "serde_json", "serde_yaml" ]
 compilation = [ "serial", "lazy_static", "shell-words", "xcode" ]
-logging     = [ "tracing", "tracing-appender", "tracing-subscriber" ]
 async       = [ "tokio", "async-trait", "async-stream" ]
 proc        = [ "libproc" ]
 watcher     = [ "dirs", "notify", "wax" ]
@@ -49,6 +46,7 @@ path = "src/lib.rs"
 [workspace]
 members = [
   "lua/xbase",
+  "crates/*",
 ]
 
 [[bin]]
@@ -77,10 +75,10 @@ tokio-util            = { version = "0.7.1",  features = ["codec"], optional = t
 async-trait           = { version = "0.1.52", optional = true }
 async-stream          = { version = "0.3.3", optional = true }
 process-stream        = { version = "0.2.*", optional = true }
+
 # Logging Feature
-tracing               = { version = "0.1.32", optional = true }
-tracing-subscriber    = { version = "0.3.9",  features = ["env-filter"], optional = true}
-tracing-appender      = { version = "0.2.1",  optional = true }
+tracing               = { path = "./crates/tracing/" }
+
 # Filesystem watcher
 notify                = { version = "5.0.0-pre.13", optional = true }
 dirs                  = { version = "4.0",    optional = true }
