--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -52,3 +52,4 @@ shell-words           = { version  = "1.1.0" }
 libc                  = { version = "0.2.126"}
 libproc               = { version = "0.12.0" }
 paste = "1.0.7"
+which = "4.2.5"
