--- a/lualib/Cargo.toml
+++ b/lualib/Cargo.toml
@@ -11,3 +11,4 @@ xbase-proto            = { path = "../proto/" }
 serde_json       = "1.0.81"
 mlua             = { version = "0.7.4", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"]  }
 tap = "1.0.1"
+lazy_static = "1.4.0"
