--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -27,6 +27,8 @@ async-trait           = { version = "0.1.52" }
 async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
 process-stream        = { version = "0.2.*" }
+# xcodeproj             = { version = "0.2.*" }
+xcodeproj             = { path = "../../xcodeproj/" }
 
 
 # Filesystem watcher
