feat: make xcodeproj source of truth (#80)
* feat(daemon): switch to reading from xcodeproj only
* ref(daemon): remove xcodegen project types
* ref: remove xcodegen.rs
* feat(lua): identity xcodeproj on setup
* fix(compile): error while removing non-existing cache
* chore(readme): requirements
* ref: use platform target method instead of sdkroots
* ref: use xcodeproj new api
* chore(deps): bump wax dependency
* chore: update readme

--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -27,12 +27,14 @@ async-trait           = { version = "0.1.52" }
 async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
 process-stream        = { version = "0.2.*" }
+# xcodeproj             = { version = "0.2.*" }
+xcodeproj             = { path = "../../xcodeproj/" }
 
 
 # Filesystem watcher
 notify                = { version = "5.0.0-pre.13" }
 dirs                  = { version = "4.0" }
-wax                   = { version = "0.4.0" }
+wax                   = { version = "0.5.0" }
 
 # Static
 lazy_static           = { version = "1.4.0" }
