ref: rename tracing package to log
conflicts with running cargo check and test

--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 
 # Internal
-tracing               = { path = "./../tracing/" }
+log                   = { path = "./../log/" }
 xbase-proto           = { path = "./../proto/" }
 
 # Error Handling
