--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -11,4 +11,4 @@ paste        = "1.0.7"
 serde        = { version  = "1", features = ["derive"]  }
 serde_json   = "1"
 strum        = { version = "0.24.0",  features = ["derive"] }
-tracing      = { path = "../tracing/" }
+log          = { path = "../log/" }
