--- a/sourcekit/Cargo.toml
+++ b/sourcekit/Cargo.toml
@@ -14,5 +14,5 @@ dirs                  = "4.0"
 once_cell             = "1.12.0"
 serde_json            = "1.0.81"
 anyhow                = "1.0.57"
-tracing               = { path = "../tracing/" }
+log               = { path = "../log/" }
 tap                   = "1.0.1"
