--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "xbase-daemon"
+name = "xbase"
 version = "0.1.2"
 edition = "2021"
 
@@ -28,6 +28,7 @@ async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
 process-stream        = { version = "0.2.*" }
 xcodeproj             = { version = "0.2.*" }
+# xcodeproj             = { path = "../../xcodeproj/" }
 
 # Filesystem watcher
 notify                = { version = "5.0.0-pre.13" }
@@ -52,3 +53,4 @@ libc                  = { version = "0.2.126"}
 libproc               = { version = "0.12.0" }
 paste = "1.0.7"
 which = "4.2.5"
+erased-serde = "0.3.21"
