feat(swift): initial support

--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -43,7 +43,8 @@ nvim-rs               = { version = "0.4.0", features = ["use_tokio"] }
 
 # Other
 tap                   = "1.0.1"
-xclog                 = { version  = "0.2.*",  features = ["with_tracing"] }
+# xclog                 = { version  = "0.2.*",  features = ["with_tracing"] }
+xclog                 = { path = "../../../rust/xclog"}
 simctl                = { git = "https://github.com/tami5/simctl" }
 derive-deref-rs       = { version = "0.1.1"}
 shell-words           = { version  = "1.1.0" }
