--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 # Internal
 log                   = { path = "./../log/" }
-xbase-proto           = { path = "./../proto/" }
+xbase-proto           = { path = "./../proto/", features = ["server"] }
 
 # Error Handling
 anyhow                = { version = "^1.0.58" }
@@ -20,9 +20,8 @@ serde_yaml            = { version = "0.8.23" }
 strum                 = { version = "0.24.0",  features = ["derive"] }
 
 # Async Runtime Feature
-tokio                 = { version = "1.17.0", features = ["full"] }
+tokio                 = { version = "1.19.2", features = ["full"] }
 futures               = { version = "0.3.21" }
-tokio-util            = { version = "0.7.1",  features = ["codec"] }
 async-trait           = { version = "0.1.52" }
 async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
@@ -43,7 +42,7 @@ nvim-rs               = { version = "0.4.0", features = ["use_tokio"] }
 # Other
 tap                   = "1.0.1"
 xclog                 = { version  = "0.2.*",  features = ["with_tracing"] }
-simctl                = { git = "https://github.com/tami5/simctl" }
+simctl                = { git = "https://github.com/xbase-lab/simctl" }
 derive-deref-rs       = { version = "0.1.1"}
 shell-words           = { version  = "1.1.0" }
 
@@ -53,3 +52,4 @@ libproc               = { version = "0.12.0" }
 paste = "1.0.7"
 which = "4.2.5"
 erased-serde = "0.3.21"
+tarpc = { version = "0.29.0", features = ["serde-transport", "tokio1", "serde1"] }
