--- a/lualib/Cargo.toml
+++ b/lualib/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
-xbase-proto     = { path = "../proto/" }
+tarpc           = { version = "0.29.0" }
+xbase-proto     = { path = "../proto/", features = ["neovim"] }
 serde_json      = "1.0.81"
-mlua            = { version = "0.8.0", features = ["lua51", "module", "vendored", "send", "serialize", "async", "macros"]  }
+mlua            = { version = "0.8.0", features = ["luajit", "module", "vendored", "send", "serialize", "async", "macros"]  }
 tap             = "1.0.1"
-lazy_static     = "1.4.0"
+tokio           = { version = "1.19.2", features = ["net", "rt-multi-thread"] }
+once_cell = "1.12.0"
