ref: rename lualib to editor-lib

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
   # Main xbase daemon
   "daemon",
   # library to communicate with the daemon
-  "lualib",
+  "editor",
 ]
 
 [profile.dev]
