chore(deps): update xclog and process-stream + refactor

--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -25,7 +25,7 @@ futures               = { version = "0.3.21" }
 async-trait           = { version = "0.1.52" }
 async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
-process-stream        = { version = "0.2.*" }
+process-stream        = { version = "0.3.*", features = ["serde"] }
 xcodeproj             = { version = "0.2.*" }
 
 # Filesystem watcher
@@ -41,7 +41,7 @@ nvim-rs               = { version = "0.4.0", features = ["use_tokio"] }
 
 # Other
 tap                   = "1.0.1"
-xclog                 = { version  = "0.2.*",  features = ["with_tracing"] }
+xclog                 = { version  = "0.3.*",  features = ["with_tracing"] }
 simctl                = { git = "https://github.com/xbase-lab/simctl" }
 derive-deref-rs       = { version = "0.1.1"}
 shell-words           = { version  = "1.1.0" }
