--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -25,7 +25,7 @@ futures               = { version = "0.3.21" }
 async-trait           = { version = "0.1.52" }
 async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
-process-stream        = { version = "0.3.*", features = ["serde"] }
+process-stream        = { version = "0.4.*", features = ["serde"] }
 xcodeproj             = { version = "0.2.*" }
 
 # Filesystem watcher
@@ -53,3 +53,7 @@ paste = "1.0.7"
 which = "4.2.5"
 erased-serde = "0.3.21"
 tarpc = { version = "0.29.0", features = ["serde-transport", "tokio1", "serde1"] }
+linemux = "0.2.3"
+
+[dev-dependencies]
+tracing-test = "0.2.2"
