--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -24,8 +24,12 @@ simctl       = { git = "https://github.com/xbase-lab/simctl", optional = true }
 tokio-serde  = { version = "0.8.0", features = ["bincode", "json"] }
 tokio-util   = { version = "0.6.9",  features = ["codec"] }
 mlua         = { version = "0.8.0", optional = true  }
+process-stream = { version = "0.4.*", features = ["serde"] }
+tokio    = { version = "1.19.2" }
+linemux = {version = "0.2.3", optional = true}
+
 [features]
 default = []
 server = [ "which", "notify", "nvim-rs", "simctl"]
 client = [ ]
-neovim = [ "client", "mlua" ]
+neovim = [ "client", "mlua", "linemux" ]
