--- a/editor/Cargo.toml
+++ b/editor/Cargo.toml
@@ -22,4 +22,7 @@ async-trait = "0.1.56"
 serde = { version = "1.0.137", features = ["derive"] }
 linemux = "0.2.3"
 process-stream = { version = "0.4.1", features = ["serde"] }
-
+async_once = "0.2.6"
+lazy_static = "1.4.0"
+os_pipe = "1.0.1"
+derive-deref-rs = "0.1.1"
