--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "xbase-editor-lib"
+name = "xbase-client"
 version = "0.2.0"
 edition = "2021"
 description = "XBase Editor editor library"
