ref(daemon): move out nvim specific logic (#103)
* init

* chore(deps): update xclog and process-stream + refactor

* ref: setup shared logger

* ref: remove nvim-rs

* feat: broadcast server

* fix(editor): receiving multiple messages at the same time

This just a hack because I couldn't pinpoint why is the client is
receiving a bulk of message separated by newline

* ref(editor): rename BroadcastMessage to Broadcast

* feat(nvim): setup logger

* fix: run/build commands

* ref: logs

* ref: remove log macros

* ref: remove log_request

* ref: remove client type, use root only

* fix: status line updates

* ref: rename editor to client

* fix: watch status

* feat(nvim): support custom notify

* feat: respect user log level

* enh(logger): format

* fix(tuist): generate compile commands

* ref: rename neovim to nvim

* chore: cleanup

* ref: move make try_register part of register

* ref(client): register return bool

* ref: move logging functionality to lua

* ref: clean up

* fix: open logger on error

* feat: append generation logs on error only

* ref(nvim): move logger buffer mappings to setup

* fix(nvim): change log buffer change position if already opened

* feat(nvim): add custom configurations for log_buffer

* chore: add icon to error messages

* feat(messages): success level

* feat: update lsp server on compile files reloaded

--- a/daemon/Cargo.toml
+++ b/daemon/Cargo.toml
@@ -25,7 +25,7 @@ futures               = { version = "0.3.21" }
 async-trait           = { version = "0.1.52" }
 async-stream          = { version = "0.3.3" }
 parity-tokio-ipc      = { version = "0.9.0" }
-process-stream        = { version = "0.2.*" }
+process-stream        = { version = "0.4.*", features = ["serde"] }
 xcodeproj             = { version = "0.2.*" }
 
 # Filesystem watcher
@@ -36,12 +36,9 @@ wax                   = { version = "0.5.0" }
 # Static
 lazy_static           = { version = "1.4.0" }
 
-# Nvim
-nvim-rs               = { version = "0.4.0", features = ["use_tokio"] }
-
 # Other
 tap                   = "1.0.1"
-xclog                 = { version  = "0.2.*",  features = ["with_tracing"] }
+xclog                 = { version  = "0.3.*",  features = ["with_tracing"] }
 simctl                = { git = "https://github.com/xbase-lab/simctl" }
 derive-deref-rs       = { version = "0.1.1"}
 shell-words           = { version  = "1.1.0" }
@@ -53,3 +50,8 @@ paste = "1.0.7"
 which = "4.2.5"
 erased-serde = "0.3.21"
 tarpc = { version = "0.29.0", features = ["serde-transport", "tokio1", "serde1"] }
+linemux = "0.2.3"
+os_pipe = "1.0.1"
+
+[dev-dependencies]
+tracing-test = "0.2.2"
