--- a/proto/Cargo.toml
+++ b/proto/Cargo.toml
@@ -19,13 +19,18 @@ anyhow       = "1.0"
 thiserror    = "1.0.31"
 which        = { version = "4.2.5", optional = true }
 notify       = { version = "4.0.17", optional = true }
-nvim-rs      = { version = "0.4.0", features = ["use_tokio"], optional = true }
 simctl       = { git = "https://github.com/xbase-lab/simctl", optional = true }
+
 tokio-serde  = { version = "0.8.0", features = ["bincode", "json"] }
 tokio-util   = { version = "0.6.9",  features = ["codec"] }
 mlua         = { version = "0.8.0", optional = true  }
+process-stream = { version = "0.4.*", features = ["serde"] }
+tokio    = { version = "1.19.2" }
+linemux = {version = "0.2.3", optional = true}
+xcodeproj = "0.2.12"
+
 [features]
 default = []
-server = [ "which", "notify", "nvim-rs", "simctl"]
+server = [ "which", "notify", "simctl"]
 client = [ ]
-neovim = [ "client", "mlua" ]
+neovim = [ "client", "mlua", "linemux" ]
