chore(proto): remove buffer direction for the api
This is no longer needed in server side

--- a/client/cbindgen.toml
+++ b/client/cbindgen.toml
@@ -100,8 +100,8 @@ bitflags = false
 ############## Options for How Your Rust library Should Be Parsed ##############
 
 [parse]
-parse_deps = false
-include = []
+parse_deps = true
+include = [ "xbase-proto" ]
 exclude = []
 clean = false
 extra_bindings = []
